ENG-10080 Load:Fix minor alignment issue

--- a/assets/stylesheets/less/partials/loadWizard.less
+++ b/assets/stylesheets/less/partials/loadWizard.less
@@ -1411,7 +1411,7 @@
     }
 
     .fileListArea {
-        margin: 8px 0 0 24px;
+        margin: 8px 0 0 0;
 
         .fileListHeader {
             color: #d6d6d6;
